compiler/weave_syntax/tests/data/syntax/declarations/function0001.error
error: Unexpected tokens
        --> <source>:4:5
         |
       4 |     private package; function fooB() { }
         |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
